feat: footer update

--- a/index.html
+++ b/index.html
@@ -63,6 +63,41 @@
 
     <section id="shop-part" class="shop-part"></section>
 
-    <footer id="footer" class="footer"></footer>
+    <footer id="footer" class="footer">
+      <div class="container">
+        <div class="footer-nav">
+          <img src="images/logo_footer.png" alt="Error" class="logo-footer" />
+          <ul class="menu-footer">
+            <li>
+              <a
+                id="selected"
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              >
+                Home
+              </a>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                About Us
+              </a>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Blog
+              </a>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Policy
+              </a>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Contact
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-line">
+          <img
+            src="images/Footer_Bracket.png"
+            alt="Error"
+            class="footer-line-img"
+          />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
