feat: completed header, footer in progress

--- a/index.html
+++ b/index.html
@@ -18,37 +18,50 @@
           <img src="images/logo_header.png" alt="GhostHost" class="logo" />
           <ul class="menu">
             <li>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                Home
-              </a>
+              <div class="menu-points">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                  Home
+                </a>
+              </div>
             </li>
             <li>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                Domain
-              </a>
+              <div class="menu-points">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                  Domain
+                </a>
+              </div>
             </li>
             <li>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                Hosting
-              </a>
+              <div class="menu-points">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                  Hosting
+                </a>
+              </div>
             </li>
             <li>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                Clients
-              </a>
+              <div class="menu-points">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                  Clients
+                </a>
+              </div>
             </li>
             <li>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                Blog
-              </a>
+              <div class="menu-points">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                  Blog
+                </a>
+              </div>
             </li>
             <li>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                Support
-              </a>
+              <div class="menu-points">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                  Support
+                </a>
+              </div>
             </li>
           </ul>
         </div>
+        <img src="../images/Header_Stick.png" alt="Error" class="underline-nav" />
         <div class="header-text">
           <h1 class="welcome-text">Hello!</h1>
           <div class="welcome-helper">
@@ -60,8 +73,15 @@
         </div>
       </div>
     </header>
-
-    <section id="shop-part" class="shop-part"></section>
+    <section id="register" class="register">
+      <div class="register-buttoms">
+        <a href="#" class="login-buttom">login</a>
+      </div>
+      <div class="register-buttoms">
+        <a href="#" class="reg-buttom">register</a>
+      </div>
+    </section>
+    <!-- <section id="shop-part" class="shop-part"></section> -->
 
     <footer id="footer" class="footer">
       <div class="container">
@@ -70,21 +90,33 @@
           <ul class="menu-footer">
             <li>
               <a
-                id="selected"
+                class="footer-points"
                 href="https://developer.mozilla.org/en-US/docs/Web/HTML"
               >
                 Home
               </a>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+              <a
+                class="footer-points"
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              >
                 About Us
               </a>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+              <a
+                class="footer-points"
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              >
                 Blog
               </a>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+              <a
+                class="footer-points"
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              >
                 Policy
               </a>
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+              <a
+                class="footer-points"
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              >
                 Contact
               </a>
             </li>
