feat: header end, section one in progress

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="//db.onlinewebfonts.com/c/c136aa346fbf887f692c9f21b2601c85?family=Montserrat+Ultra+Light"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
     <header id="header" class="header">
@@ -61,7 +66,11 @@
             </li>
           </ul>
         </div>
-        <img src="../images/Header_Stick.png" alt="Error" class="underline-nav" />
+        <img
+          src="../images/Header_Stick.png"
+          alt="Error"
+          class="underline-nav"
+        />
         <div class="header-text">
           <h1 class="welcome-text">Hello!</h1>
           <div class="welcome-helper">
@@ -81,7 +90,43 @@
         <a href="#" class="reg-buttom">register</a>
       </div>
     </section>
-    <!-- <section id="shop-part" class="shop-part"></section> -->
+    <section id="search-shop" class="search-shop">
+      <div class="shop-text">
+        <h2 class="domain-article">Would you buy a new domain?</h2>
+        <p class="domain-info">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          auctor mauris ac nulla interdum, id molestier.
+        </p>
+      </div>
+      <div class="options">
+        <span>www.</span>
+        <input type="text" value="What do you want?" />
+        <select id="domain-names">
+          <option value=".com">.com</option>
+          <option value=".us">.us</option>
+          <option value=".ru">.ru</option>
+          <option value=".by">.by</option>
+        </select>
+        <div class="options-nav">
+          <ul class="option1">
+            <li>.com</li>
+            <li>.net</li>
+          </ul>
+          <ul class="option2">
+            <li>1 year</li>
+            <li>1 year</li>
+          </ul>
+          <ul class="option3">
+            <li>$9.00 USD</li>
+            <li>$9.00 USD</li>
+          </ul>
+          <ul class="option4">
+            <li>Transfer Price No</li>
+            <li>Transfer Price No</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <footer id="footer" class="footer">
       <div class="container">
