--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
         <a href="#" class="reg-buttom">register</a>
       </div>
     </section>
+    <!-- <section id="register1" class="register1">
+      <div class="register-buttoms1">
+        <a href="#" class="login-buttom1"><span>login</span></a>
+        
+      </div>
+      <div class="register-buttoms1">
+        <a href="#" class="reg-buttom1"><span>register</span></a>
+      </div>
+    </section> -->
     <section id="search-shop" class="search-shop">
       <div class="shop-text">
         <h2 class="domain-article">Would you buy a new domain?</h2>
@@ -99,35 +108,34 @@
         </p>
       </div>
       <div class="options">
-        <span>www.</span>
-        <input type="text" value="What do you want?" />
-        <select id="domain-names">
+        <span class="start-domain">www.</span>
+        <input type="text" value="What do you want?" class="center-domain"/>
+        <select id="domain-names" class="last-domain">
           <option value=".com">.com</option>
           <option value=".us">.us</option>
           <option value=".ru">.ru</option>
           <option value=".by">.by</option>
         </select>
-        <div class="options-nav">
-          <ul class="option1">
-            <li>.com</li>
-            <li>.net</li>
-          </ul>
-          <ul class="option2">
-            <li>1 year</li>
-            <li>1 year</li>
-          </ul>
-          <ul class="option3">
-            <li>$9.00 USD</li>
-            <li>$9.00 USD</li>
-          </ul>
-          <ul class="option4">
-            <li>Transfer Price No</li>
-            <li>Transfer Price No</li>
-          </ul>
-        </div>
       </div>
     </section>
-
+    <div class="options-nav">
+      <ul class="option1">
+        <li>.com</li>
+        <li>.net</li>
+      </ul>
+      <ul class="option2">
+        <li>1 year</li>
+        <li>1 year</li>
+      </ul>
+      <ul class="option3">
+        <li>$9.00 USD</li>
+        <li>$9.00 USD</li>
+      </ul>
+      <ul class="option4">
+        <li>Transfer Price No</li>
+        <li>Transfer Price No</li>
+      </ul>
+    </div>
     <footer id="footer" class="footer">
       <div class="container">
         <div class="footer-nav">
