feat: footer completed. shop section in progress

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <script src="https://kit.fontawesome.com/927f260e41.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header id="header" class="header">
@@ -109,7 +110,7 @@
       </div>
       <div class="options">
         <span class="start-domain">www.</span>
-        <input type="text" value="What do you want?" class="center-domain"/>
+        <input type="text" value="What do you want?" class="center-domain" />
         <select id="domain-names" class="last-domain">
           <option value=".com">.com</option>
           <option value=".us">.us</option>
@@ -117,25 +118,23 @@
           <option value=".by">.by</option>
         </select>
       </div>
+      <!-- <div class="domain-price">
+        <table class="domain-table">
+          <tr class="table-row">
+            <td class="top">.COM</td>
+            <td class="top one">1 Year</td>
+            <td class="top price">$9.00 USD</td>
+            <td class="top">Transfer Price No</td>
+          </tr>
+          <tr class="table-row">
+            <td class="bottom">.NET</td>
+            <td class="bottom one">1 Year</td>
+            <td class="bottom price">$9.00 USD</td>
+            <td class="bottom"><span>Transfer Price No</span></td>
+          </tr>
+        </table>
+      </div> -->
     </section>
-    <div class="options-nav">
-      <ul class="option1">
-        <li>.com</li>
-        <li>.net</li>
-      </ul>
-      <ul class="option2">
-        <li>1 year</li>
-        <li>1 year</li>
-      </ul>
-      <ul class="option3">
-        <li>$9.00 USD</li>
-        <li>$9.00 USD</li>
-      </ul>
-      <ul class="option4">
-        <li>Transfer Price No</li>
-        <li>Transfer Price No</li>
-      </ul>
-    </div>
     <footer id="footer" class="footer">
       <div class="container">
         <div class="footer-nav">
@@ -182,6 +181,40 @@
             class="footer-line-img"
           />
         </div>
+      </div>
+
+      <div class="footer-copyrights">
+        <table class="copyrights-content">
+          <tr>
+            <td class="copyrights-info">
+              <p>Lorem ipsum dolor sit amet, consecteteeseur</p>
+              <p>adipiscing elit. Donec mollis commodoeesene</p>
+              <p>que, non commodo risus volutpat vel.</p>
+              <br />
+              <p>Design by <b>Mert Can Eyriyer.</b></p>
+            </td>
+            <td class="copyrights-menu">
+              <ul class="cr-menu-points">
+                <li class="cr-menu-point">Support</li>
+                <li class="cr-menu-point">Account</li>
+                <li class="cr-menu-point">Product Catalog</li>
+                <li class="cr-menu-point">Shortcodes</li>
+              </ul>
+              <ul class="cr-menu-points">
+                <li class="cr-menu-point">Site Map</li>
+                <li class="cr-menu-point">Whois Search</li>
+                <li class="cr-menu-point">Web Mail</li>
+                <li class="cr-menu-point">Find Domain</li>
+              </ul>
+            </td>
+            <td class="copyrights-contact">
+              <p><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;&nbsp;0000-0000-0000</p>
+              <p><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;&nbsp;informationteam@ghosthost.com</p>
+              <p><b>Lorem Ipsum Street, Lorem Avenue,</b></p>
+              <p><b>Lorem Ipsum</b></p>
+            </td>
+          </tr>
+        </table>
       </div>
     </footer>
   </body>
