feat: funtions completed

--- a/index.html
+++ b/index.html
@@ -135,6 +135,36 @@
         </table>
       </div> -->
     </section>
+
+
+    <section class="functions">
+      <div class="functions-container">
+        <img src="../images/Functions/fast_servers.png" alt="Logo" class="functions_logo">
+        <h3 class="functions_header">Fast servers</h3>
+        <p class="functions_text">Nulla dapibus neque augue, quis<br></p>
+        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+      </div>
+      <div class="functions-container">
+        <img src="../images/Functions/cloud_servers.png" alt="Logo" class="functions_logo">
+        <h3 class="functions_header">Cloud servers</h3>
+        <p class="functions_text">Nulla dapibus neque augue, quis<br></p>
+        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+      </div>
+      <div class="functions-container">
+        <img src="../images/Functions/domain_transfer.png" alt="Logo" class="functions_logo">
+        <h3 class="functions_header">Domain Transfer</h3>
+        <p class="functions_text">Nulla dapibus neque augue, quis<br></p>
+        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+      </div>
+      <div class="functions-container">
+        <img src="../images/Functions/live_support.png" alt="Logo" class="functions_logo">
+        <h3 class="functions_header">Live Support</h3>
+        <p class="functions_text">Nulla dapibus neque augue, quis<br></p>
+        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+      </div>
+    </section>
+
+
     <footer id="footer" class="footer">
       <div class="container">
         <div class="footer-nav">
