--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </ul>
         </div>
         <img
-          src="../images/Header_Stick.png"
+          src="/images/Header_Stick.png"
           alt="Error"
           class="underline-nav"
         />
@@ -170,7 +170,7 @@
     <section class="functions">
       <div class="functions-container">
         <img
-          src="../images/Functions/fast_servers.png"
+          src="/images/Functions/fast_servers.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -180,7 +180,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="../images/Functions/cloud_servers.png"
+          src="/images/Functions/cloud_servers.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -190,7 +190,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="../images/Functions/domain_transfer.png"
+          src="/images/Functions/domain_transfer.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -200,7 +200,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="../images/Functions/live_support.png"
+          src="/images/Functions/live_support.png"
           alt="Logo"
           class="functions_logo"
         />
