fix: domain, functions

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <div class="options">
         <span class="start-domain">www.</span>
-        <input type="text" value="What do you want?" class="center-domain" />
+        <input type="text" placeholder="What do you want?" class="center-domain" />
         <select id="domain-names" class="last-domain">
           <option value=".com">.com</option>
           <option value=".us">.us</option>
