fix: images && code smells

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header id="header" class="header">
-      <div class="container">
+      <div>
         <div class="nav">
           <img src="images/logo_header.png" alt="GhostHost" class="logo" />
           <ul class="menu">
@@ -70,11 +70,6 @@
             </li>
           </ul>
         </div>
-        <img
-          src="/images/Header_Stick.png"
-          alt="Error"
-          class="underline-nav"
-        />
         <div class="header-text">
           <h1 class="welcome-text">Hello!</h1>
           <div class="welcome-helper">
@@ -104,7 +99,7 @@
       </div>
       <div class="options">
         <span class="start-domain">www.</span>
-        <input type="text" value="What do you want?" class="center-domain" />
+        <input type="text" placeholder="What do you want?" class="center-domain" />
         <select id="domain-names" class="last-domain">
           <option value=".com">.com</option>
           <option value=".us">.us</option>
@@ -151,7 +146,7 @@
     <section class="functions">
       <div class="functions-container">
         <img
-          src="/images/functions/fast_servers.png"
+          src="/images/fast_servers.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -161,7 +156,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="/images/functions/cloud_servers.png"
+          src="/images/cloud_servers.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -171,7 +166,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="/images/functions/domain_transfer.png"
+          src="/images/domain_transfer.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -181,7 +176,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="/images/functions/live_support.png"
+          src="/images/live_support.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -192,7 +187,7 @@
     </section>
 
     <footer id="footer" class="footer">
-      <div class="container">
+      <div>
         <div class="footer-nav">
           <img src="images/logo_footer.png" alt="Error" class="logo-footer" />
           <ul class="menu-footer">
