--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <section class="functions">
       <div class="functions-container">
         <img
-          src="/images/fast_servers.png"
+          src="images/fast_servers.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -156,7 +156,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="/images/cloud_servers.png"
+          src="images/cloud_servers.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -166,7 +166,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="/images/domain_transfer.png"
+          src="images/domain_transfer.png"
           alt="Logo"
           class="functions_logo"
         />
@@ -176,7 +176,7 @@
       </div>
       <div class="functions-container">
         <img
-          src="/images/live_support.png"
+          src="images/live_support.png"
           alt="Logo"
           class="functions_logo"
         />
