feat: packages complete

--- a/index.html
+++ b/index.html
@@ -148,6 +148,163 @@
         </li>
       </ul>
     </div>
+    <section class="packages">
+      <div class="package-list">
+        <div class="package-item package-item-basic">
+          <img src="images/basic_icon.png" alt="" class="package-item_icon">
+          <h3 class="package-item_title">Basic package</h3>
+          <table class="package-item_features">
+            <tr>
+              <td class="package-item_feature-names">Disk space (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-basic">50</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Subdomains</td>
+              <td class="package-item_feature-values package-item_feature-values-basic">50</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Transfer (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-basic">50</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Data bases</td>
+              <td class="package-item_feature-values package-item_feature-values-basic">1</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Dashboards</td>
+              <td class="package-item_feature-values package-item_feature-values-basic">1</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Control Panel & FTP</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Free support</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+          </table>
+          <div class="package-item_price">15</div>
+          <div class="package-item_select package-item_select-basic">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Select plan</a>
+          </div>
+        </div>
+        <div class="package-item package-item-normal">
+          <img src="images/normal_icon.png" alt="" class="package-item_icon">
+          <h3 class="package-item_title">Normal package</h3>
+          <table class="package-item_features">
+            <tr>
+              <td class="package-item_feature-names">Disk space (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-normal">100</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Subdomains</td>
+              <td class="package-item_feature-values package-item_feature-values-normal">100</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Transfer (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-normal">100</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Data bases</td>
+              <td class="package-item_feature-values package-item_feature-values-normal">2</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Dashboards</td>
+              <td class="package-item_feature-values package-item_feature-values-normal">2</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Control Panel & FTP</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Free support</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+          </table>
+          <div class="package-item_price">30</div>
+          <div class="package-item_select package-item_select-normal">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Select plan</a>
+          </div>
+        </div>
+        <div class="package-item package-item-big">
+          <img src="images/big_icon.png" alt="" class="package-item_icon">
+          <h3 class="package-item_title">Big package</h3>
+          <table class="package-item_features">
+            <tr>
+              <td class="package-item_feature-names">Disk space (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-big">150</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Subdomains</td>
+              <td class="package-item_feature-values package-item_feature-values-big">150</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Transfer (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-big">150</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Data bases</td>
+              <td class="package-item_feature-values package-item_feature-values-big">4</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Dashboards</td>
+              <td class="package-item_feature-values package-item_feature-values-big">4</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Control Panel & FTP</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Free support</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+          </table>
+          <div class="package-item_price">40</div>
+          <div class="package-item_select package-item_select-big">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Select plan</a>
+          </div>
+        </div>
+        <div class="package-item package-item-bigger">
+          <img src="images/biggest_icon.png" alt="" class="package-item_icon">
+          <h3 class="package-item_title">Biggest package</h3>
+          <table class="package-item_features">
+            <tr>
+              <td class="package-item_feature-names">Disk space (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-bigger">250</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Subdomains</td>
+              <td class="package-item_feature-values package-item_feature-values-bigger">250</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Transfer (GB)</td>
+              <td class="package-item_feature-values package-item_feature-values-bigger">250</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Data bases</td>
+              <td class="package-item_feature-values package-item_feature-values-bigger">6</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Dashboards</td>
+              <td class="package-item_feature-values package-item_feature-values-bigger">6</td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Control Panel & FTP</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+            <tr>
+              <td class="package-item_feature-names">Free support</td>
+              <td class="package-item_feature-values feature-values-gold"></td>
+            </tr>
+          </table>
+          <div class="package-item_price">70</div>
+          <div class="package-item_select package-item_select-bigger">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Select plan</a>
+          </div>
+        </div>
+
+      </div>
+    </section>
     <section class="about-developers">
       <div class="about-us">
         <p class="about-headline"><b>About</b> Us</p>
