fix: links, colors

--- a/index.html
+++ b/index.html
@@ -321,9 +321,15 @@
           <p><b>Jonny Doe</b></p>
           <p class="designer-prof">Designer</p>
           <div class="author-icons">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-solid fa-link"></i>
+            <a href="#">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fa-solid fa-link"></i>
+            </a>
           </div>
         </div>
         <div class="author-block">
@@ -331,9 +337,15 @@
           <p><b>John Doe</b></p>
           <p class="designer-prof">Designer</p>
           <div class="author-icons">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-solid fa-link"></i>
+            <a href="#">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fa-solid fa-link"></i>
+            </a>
           </div>
         </div>
         <div class="author-block">
@@ -341,9 +353,15 @@
           <p><b>Johnathan Doe</b></p>
           <p class="designer-prof">Designer</p>
           <div class="author-icons">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-solid fa-link"></i>
+            <a href="#">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fa-solid fa-link"></i>
+            </a>
           </div>
         </div>
       </div>
