fix: all <br> tags deleted

--- a/index.html
+++ b/index.html
@@ -308,7 +308,6 @@
     <section class="about-developers">
       <div class="about-us">
         <p class="about-headline"><b>About</b> Us</p>
-        <br />
         <b><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <p>Praesent feugiat eget diam sit amet molestie.Curabitur.</p>
           <p>ut ipsum bibendum tortor lacinia fermentum nec joeıa.</p>
@@ -389,14 +388,14 @@
       <div class="functions-container">
         <img src="images/fast_servers.png" alt="Logo" class="functions_logo" />
         <h3 class="functions_header">Fast servers</h3>
-        <p class="functions_text">Nulla dapibus neque augue, quis<br /></p>
-        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+        <div class="functions_text">Nulla dapibus neque augue, quis</div>
+        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
       </div>
       <div class="functions-container">
         <img src="images/cloud_servers.png" alt="Logo" class="functions_logo" />
         <h3 class="functions_header">Cloud servers</h3>
-        <p class="functions_text">Nulla dapibus neque augue, quis<br /></p>
-        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+        <div class="functions_text">Nulla dapibus neque augue, quis</div>
+        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
       </div>
       <div class="functions-container">
         <img
@@ -405,14 +404,14 @@
           class="functions_logo"
         />
         <h3 class="functions_header">Domain Transfer</h3>
-        <p class="functions_text">Nulla dapibus neque augue, quis<br /></p>
-        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+        <div class="functions_text">Nulla dapibus neque augue, quis</div>
+        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
       </div>
       <div class="functions-container">
         <img src="images/live_support.png" alt="Logo" class="functions_logo" />
         <h3 class="functions_header">Live Support</h3>
-        <p class="functions_text">Nulla dapibus neque augue, quis<br /></p>
-        <p class="functions_text">tincidunt tortor aliquam vitae.</p>
+        <div class="functions_text">Nulla dapibus neque augue, quis</div>
+        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
       </div>
     </section>
 
@@ -471,8 +470,7 @@
               <p>Lorem ipsum dolor sit amet, consecteteeseur</p>
               <p>adipiscing elit. Donec mollis commodoeesene</p>
               <p>que, non commodo risus volutpat vel.</p>
-              <br />
-              <p>Design by <b>Mert Can Eyriyer.</b></p>
+              <p class="copyrights-info-designer">Design by <b>Mert Can Eyriyer.</b></p>
             </td>
             <td class="copyrights-menu">
               <ul class="cr-menu-points">
