fix: author-block, functions-container, footer some <p> tags removed

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       <div class="authors-block">
         <div class="author-block">
           <img src="images/jonny_doe.png" alt="" />
-          <p><b>Jonny Doe</b></p>
+          <b>Jonny Doe</b>
           <p class="designer-prof">Designer</p>
           <div class="author-icons">
             <a href="#">
@@ -333,7 +333,7 @@
         </div>
         <div class="author-block">
           <img src="images/john_doe.png" alt="" />
-          <p><b>John Doe</b></p>
+          <b>John Doe</b>
           <p class="designer-prof">Designer</p>
           <div class="author-icons">
             <a href="#">
@@ -349,7 +349,7 @@
         </div>
         <div class="author-block">
           <img src="images/johnathan_doe.png" alt="" />
-          <p><b>Johnathan Doe</b></p>
+          <b>Johnathan Doe</b>
           <p class="designer-prof">Designer</p>
           <div class="author-icons">
             <a href="#">
@@ -388,14 +388,16 @@
       <div class="functions-container">
         <img src="images/fast_servers.png" alt="Logo" class="functions_logo" />
         <h3 class="functions_header">Fast servers</h3>
-        <div class="functions_text">Nulla dapibus neque augue, quis</div>
-        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
+        <div class="functions_text">
+          Nulla dapibus neque augue, quis
+          tincidunt tortor aliquam vitae.</div>
       </div>
       <div class="functions-container">
         <img src="images/cloud_servers.png" alt="Logo" class="functions_logo" />
         <h3 class="functions_header">Cloud servers</h3>
-        <div class="functions_text">Nulla dapibus neque augue, quis</div>
-        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
+        <div class="functions_text">
+          Nulla dapibus neque augue, quis
+          tincidunt tortor aliquam vitae.</div>
       </div>
       <div class="functions-container">
         <img
@@ -404,14 +406,16 @@
           class="functions_logo"
         />
         <h3 class="functions_header">Domain Transfer</h3>
-        <div class="functions_text">Nulla dapibus neque augue, quis</div>
-        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
+        <div class="functions_text">
+          Nulla dapibus neque augue, quis
+          tincidunt tortor aliquam vitae.</div>
       </div>
       <div class="functions-container">
         <img src="images/live_support.png" alt="Logo" class="functions_logo" />
         <h3 class="functions_header">Live Support</h3>
-        <div class="functions_text">Nulla dapibus neque augue, quis</div>
-        <div class="functions_text">tincidunt tortor aliquam vitae.</div>
+        <div class="functions_text">
+          Nulla dapibus neque augue, quis
+          tincidunt tortor aliquam vitae.</div>
       </div>
     </section>
 
@@ -467,9 +471,9 @@
         <table class="copyrights-content">
           <tr>
             <td class="copyrights-info">
-              <p>Lorem ipsum dolor sit amet, consecteteeseur</p>
-              <p>adipiscing elit. Donec mollis commodoeesene</p>
-              <p>que, non commodo risus volutpat vel.</p>
+              Lorem ipsum dolor sit amet, consecteteeseurı
+              adipiscing elit. Donec mollis commodoeesene
+              que, non commodo risus volutpat vel.
               <p class="copyrights-info-designer">Design by <b>Mert Can Eyriyer.</b></p>
             </td>
             <td class="copyrights-menu">
@@ -491,12 +495,10 @@
                 <i class="fa-solid fa-phone"></i
                 >&nbsp;&nbsp;&nbsp;0000-0000-0000
               </p>
-              <p>
                 <i class="fa-solid fa-envelope"></i
                 >&nbsp;&nbsp;&nbsp;informationteam@ghosthost.com
-              </p>
-              <p><b>Lorem Ipsum Street, Lorem Avenue,</b></p>
-              <p><b>Lorem Ipsum</b></p>
+              <b>Lorem Ipsum Street, Lorem Avenue,
+                Lorem Ipsum</b>
             </td>
           </tr>
         </table>
